--- a/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.scss
+++ b/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.scss
@@ -1,190 +1,60 @@
-// .link:hover {
-//     cursor: pointer;
-// }
+//HOVER SOBRE LAS FILAS
+.mat-mdc-row:hover .mat-mdc-cell {
+  background-color: var(--color100);
+}
 
-// .border {
-//     border: 1px solid var(--color500) !important;
-//     border-radius: 10px;
-//     margin: 5px;
-// }
+.row-disabled {
+    background-color: var(--danger-base);
+}
 
+.mat-mdc-header-row {
+  text-align: left;
+}
 
-// .small{
-//     font-weight: 600;
-//     font-family: sans-serif;
-// }
+.mat-column-id {
+  max-width: 60px;
+  text-align: center;
+}
 
-// .explicacion {
-//     font-size: 12pt;
-// }
+.mat-column-facultad {
+  max-width: 300px;
+}
 
-// .titulo {
-//     font-size: 16pt;
-// }
+.mat-column-nombre_proyecto {
+  width: auto;
+}
 
+.mat-column-nivel_proyecto {
+  max-width: 90px;
+}
 
-// .text-left {
-//     text-align: left;
-// }
+.mat-column-codigo {
+  max-width: 80px;
+}
 
-// .width-id {
-//     width: 30px;
-// }
+.mat-column-cod_snies {
+  max-width: 80px;
+}
 
-// .search-container {
-//     display: flex;
-//     justify-content: flex-end;
-// }
+.mat-column-activo {
+  max-width: 75px;
+}
 
-// .search-input {
-//     width: 250px;
-//     padding: 10px 40px 10px 15px;
-//     border-radius: 1.5px;
-//     border: 1px solid var(--color500);
-//     font-size: 12pt;
-//     outline: none;
-//     border-color: var(--color500);
-//     margin-bottom: 15px;
-// }
+.mat-column-vencimiento_registro {
+  max-width: 130px;
+}
 
+.mat-column-vencimiento_alta_calidad {
+  max-width: 130px;
+}
 
-// .search-input:focus {
-//     border-color: var(--color2);
-// }
+.mat-column-acciones {
+  max-width: 100px;
+}
 
-// .icon-busqueda {
-//     border: solid 1.5px var(--color2);
-//     color: white;
-//     font-size: 25px;
-//     border-radius: 1px;
-//     padding: 6px;
-//     padding-bottom: 32px;
-//     padding-right: 30px;
-//     background-color: var(--others-accent);
-// }
-
-// .demo-table {
-//     width: 100%;
-//     overflow: auto;
-//     border: 1px solid var(--color500);
-// }
-
-// //TABLA
-
-// .mat-mdc-row .mat-mdc-cell {
-//     border-bottom: 1px solid transparent;
-//     border-top: 1px solid transparent;
-//     cursor: pointer;
-// }
-
-// .mat-mdc-header-cell {
-//     border-bottom: 1px solid var(--color500);
-// }
-
-// .mat-mdc-header-row {
-//     text-align: left;
-
-// }
-
-// .mat-mdc-row:nth-child(odd) .mat-mdc-cell {
-//     background-color: var(--color100);
-// }
-
-// .mat-mdc-row:hover .mat-mdc-cell {
-//     background-color: var(--color200);
-// }
-
-// .mat-mdc-table-sticky-border-elem-right {
-//     border-left: 1px solid var(--color500);
-// }
-
-// .mat-mdc-table-sticky-border-elem-left {
-//     border-right: 1px solid var(--color500);
-// }
-
-// .center {
-//     align-items: center;
-// }
-
-// .mat-column-id {
-//     max-width: 60px;
-//     text-align: center;
-// }
-
-// .mat-column-facultad {
-//     min-width: 180px;
-//     border-right: 1px solid var(--color500);
-// }
-
-// .mat-column-nombre_proyecto {
-//     border-right: 1px solid var(--color500);
-// }
-
-// .mat-column-nivel_proyecto {
-//     max-width: 90px;
-//     border-right: 1px solid var(--color500);
-// }
-
-// .mat-column-codigo {
-//     max-width: 80px;
-//     border-right: 1px solid var(--color500);
-// }
-
-// .mat-column-cod_snies {
-//     max-width: 80px;
-//     border-right: 1px solid var(--color500);
-// }
-
-// .mat-column-activo {
-//     max-width: 75px;
-//     border-right: 1px solid var(--color500);
-// }
-
-// .mat-column-vencimiento_registro {
-//     max-width: 130px;
-//     border-right: 1px solid var(--color500);
-// }
-
-// .mat-column-vencimiento_alta_calidad {
-//     max-width: 130px;
-// }
-
-// .mat-column-acciones {
-//     max-width: 180px;
-// }
-
-// ::ng-deep .mat-mdc-button-base:hover {
-//     background-color: #C0E7FF;
-// }
-
-// ::ng-deep .mat-mdc-paginator-range-label {
-//     font-size: 12pt;
-// }
-
-// ::ng-deep .mat-mdc-paginator-container {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center !important;
-//     padding: 0 8px;
-//     flex-wrap: wrap-reverse;
-//     width: 100%;
-//     min-height: var(--mat-paginator-container-size);
-// }
-
-// .mat-mdc-progress-spinner {
-//     --mdc-circular-progress-active-indicator-color: #03678f;
-// }
-
-.loader-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(117, 115, 115, 0.5);
-    /* Fondo semitransparente rojo */
-    z-index: 1;
+.badge {
+    margin: 0.4em;
+    width: 0.5em;
+    height: 0.5em;
+    border-radius: 100%;
 }
