--- a/src/app/modules/lista-proyecto-academico/modificar-proyecto-academico/modificar-proyecto-academico.component.html
+++ b/src/app/modules/lista-proyecto-academico/modificar-proyecto-academico/modificar-proyecto-academico.component.html
@@ -758,6 +758,7 @@
                   [formControl]="Campo3Control"
                   required
                   [(ngModel)]="opcionSeleccionadoArea"
+                  (selectionChange)="onSelectionChanged($event)"
                 >
                   <mat-option>--</mat-option>
                   <mat-option *ngFor="let areacono of area" [value]="areacono">
