feat: loading cuando se crea un proyecto curricular y redireccionamiento a la lista luego de crear el proyecto.
udistrital/sga_documentacion#470

--- a/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.html
+++ b/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.html
@@ -1,3 +1,4 @@
+
 <mat-card>
   <mat-card-header>
     <mat-card-title>
@@ -855,7 +856,7 @@
             <button
               mat-flat-button
               color="accent"
-              [disabled]="checkregistro"
+              [disabled]="checkregistro || isLoading"
               (click)="registroproyecto()"
               type="submit"
               color="primary"
@@ -868,3 +869,19 @@
     </mat-vertical-stepper>
   </mat-card-content>
 </mat-card>
+
+
+<!-- Indicador de carga SVG -->
+<div *ngIf="isLoading" class="loading-indicator">
+  <svg class="loading-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
+    <rect fill="#03678F" stroke="#03678F" stroke-width="15" width="30" height="30" x="25" y="50">
+      <animate attributeName="y" calcMode="spline" dur="2" values="50;120;50;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.4"></animate>
+    </rect>
+    <rect fill="#03678F" stroke="#03678F" stroke-width="15" width="30" height="30" x="85" y="50">
+      <animate attributeName="y" calcMode="spline" dur="2" values="50;120;50;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="-.2"></animate>
+    </rect>
+    <rect fill="#03678F" stroke="#03678F" stroke-width="15" width="30" height="30" x="145" y="50">
+      <animate attributeName="y" calcMode="spline" dur="2" values="50;120;50;" keySplines=".5 0 .5 1;.5 0 .5 1" repeatCount="indefinite" begin="0"></animate>
+    </rect>
+  </svg>
+</div>
